@@ -1,3 +1,7 @@
+2003-09-27  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* automated/test-harness.el: Give the maintainers what they want.
+
 2003-09-26  Adrian Aichner  <adrian@xemacs.org>
 
 	* automated/test-harness.el (test-harness-from-buffer): Revert
